<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KodeSearch</string>
    <string name="action_settings">Settings</string>
    <string name="sub_title">Search any code on php, java</string>
    <string name="hint">search code e.g. array</string>
    <string name="btn_msg">Search!</string>
    <string name="action_share">Share code</string>
    <string name="action_share_to_facebook">Facebook</string>
    <string name="action_tweet">Twitter</string>
    <string name="description_label">Description</string>
    <string name="synopsis_label">Syntax</string>
    <string name="news_string">Events news will be listed here</string>
    <string name="slide">Option 1, Option2</string>

    <string-array name="actions_titles">
        <item>Events</item>
        <item>Search code</item>
    </string-array>
    <string-array name="actions_layout">
        <item>activity_news</item>
        <item>activity_search</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_location_news</item>
        <item>@drawable/ic_action_find</item>
    </array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
     <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>